# bale-notification-handler

./: .dockerignore  .env.bale.example  .env.telegram.example  .gitignore  Dockerfile.bale  Dockerfile.telegram  README.md  docker-compose.generated.yml  docker-compose.yml  main.py  pyproject.toml  setup_multi_bale_env.py  telegram_relay.py
